force-app/main/default/objects/Account/fields/Editor_in_Chief__c.field-meta.xml
<CustomField>
    <fullName>Editor_in_Chief__c</fullName>
    <label>Editor in Chief</label>
    <length>50</length>
    <type>Text</type>
</CustomField>