force-app/main/default/objects/Account/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <label>Establishment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>