force-app/main/default/objects/Account/fields/ISBN_Number__c.field-meta.xml
<CustomField>
    <fullName>ISBN_Number__c</fullName>
    <label>ISBN Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>