force-app/main/default/objects/Account/fields/ISSN__c.field-meta.xml
<CustomField>
    <fullName>ISSN__c</fullName>
    <label>ISSN</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>