force-app/main/default/objects/Account/fields/Journal_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Journal_Email_Address__c</fullName>
    <label>Journal  Email Address</label>
    <type>Email</type>
</CustomField>