force-app/main/default/objects/Account/fields/Key_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Name__c</fullName>
    <label>Key Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>