force-app/main/default/objects/Account/fields/Total_Published_Papers__c.field-meta.xml
<CustomField>
    <fullName>Total_Published_Papers__c</fullName>
    <label>Total Published Papers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>