force-app/main/default/objects/Account/fields/Total_Received_Paper__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Paper__c</fullName>
    <label>Total Received Paper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>