force-app/main/default/objects/Account/fields/Total_Rejected_Papers__c.field-meta.xml
<CustomField>
    <fullName>Total_Rejected_Papers__c</fullName>
    <label>Total Rejected Papers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>